# bewegtbild

./: Cargo.toml  README.md  build.rs  index.html
assets/: sw.js
src/: app.rs  config.rs  lib.rs  main.rs  pdf.rs  slides.rs  video.rs
