[package]
name = "bewegtbild"
version = "0.1.0"
authors = ["Timo Bachmann <fachmanntj@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.79"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
#
# [[bin]]
# name = "bewegtbild-conf"

[dependencies]
# GUI related dependencies
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
  # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  # "persistence",   # Enable restoring app state when restarting the app.
  "wayland",
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
# dependencies to render slides / pdf
image = "0.25.4"
pdfium-render = { version = "=0.8.22" }
# dependencies to render videos
egui-video = { git = "https://github.com/tfachmann/egui-video" }
# argument parsing / config input
clap = { version = "4.5.20", features = ["derive"] }
serde_json = "1.0.132"
notify = "8.0.0"

[features]
default = []
static = ["pdfium-render/static", "pdfium-render/libc++"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
